# alfred-cli

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  go.mod  justfile  main.go  package-lock.json  package.json  rust_migration_plan.md  tsconfig.json
crates/alfred-cli/: Cargo.toml
crates/alfred-cli/src/: main.rs  markdown.rs
crates/alfred-core/: Cargo.toml
crates/alfred-core/src/: lib.rs  models.rs  router.rs  session.rs
crates/alfred-core/src/providers/: openrouter.rs
crates/alfred-node-bridge/: Cargo.toml
crates/alfred-node-bridge/src/: lib.rs
crates/alfred-rag/: Cargo.toml
crates/alfred-rag/src/: lib.rs
crates/alfred-tools/: Cargo.toml
crates/alfred-tools/src/: config.rs  fs.rs  git.rs  lib.rs  shell.rs
docs/: architecture.md  roadmap.md
prompts/: SOUL.md
tui/: chat.go
