[workspace]
members = [
  "crates/alfred-cli",
  "crates/alfred-core",
  "crates/alfred-tools",
  "crates/alfred-rag",
  "crates/alfred-node-bridge",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
camino = { version = "1.1", features = ["serde1"] }
crossterm = "0.27"
dunce = "1.0"
ratatui = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-util = "0.7"
uuid = { version = "1", features = ["v4", "serde"] }
