[package]
name = "alfred-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
ratatui.workspace = true
ratatui-core = "0.1"
serde.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
alfred-core = { path = "../alfred-core" }
alfred-tools = { path = "../alfred-tools" }
tui-markdown = "0.3.7"

[[bin]]
name = "alfred"
path = "src/main.rs"
